namespaces/firstapp/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: firstapp
  name: firstapp
  namespace: firstapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: firstapp
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: firstapp
        resources: {}
---
