namespaces/firstapp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: firstapp
  name: firstapp
  namespace: firstapp
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: svc-firstapp
    weight: 100
status: {}
